<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- ToDo題名 -->
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <!-- ToDo内容 -->
    
    <TextView
        android:id="@+id/todo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_content_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/todo_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>
	
    <!-- TODO完了期限 -->
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit_date_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <DatePicker
        android:id="@+id/limit_date"
        android:calendarViewShown="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </DatePicker>
    
     <!-- 新規作成ボタン -->
     
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createToDoButtonClick"
        android:text="@string/createToDoButton" />

</TableLayout>